# monkey_typer

./: .gitignore  CMakeLists.txt  README.md
dane/: config.txt  wyniki.txt
src/: Gra.cpp  Gra.h  Instrukcje.cpp  Instrukcje.h  Konfiguracje.cpp  Konfiguracje.h  Menu.cpp  Menu.h  Slowo.cpp  Slowo.hpp  main.cpp
